# muMatScale

./: CMakeLists.txt  INSTALL  LICENSE  README.md  uMatIC_LICENSE
scripts/: build_amd.sh
src/: .growth.c.swp  ca_main.c  calculate.c  calculate.h  checkpoint.c  checkpoint.h  curvature.c  curvature.h  debug.h  distribute.c  distribute.h  face_util.c  face_util.h  file_io.c  file_io.h  fluidflow.h  functions.c  functions.h  globals.c  globals.h  grain.c  grain.h  growth.c  growth.h  hello_jsrun.h  io_vtk.c  io_vtk.h  io_xdmf.c  io_xdmf.h  ll.c  ll.h  loop.c  loop.h  packing.c  packing.h  profiler.c  profiler.h  read_ctrl.c  read_ctrl.h  setup.c  (+8 more)
tests/: CMakeLists.txt  am_singletrack.in  ca6mpi.in  ca_ctrl.in  one_grain.in  testAMtrack.py  testMultiGrains.py  testOneGrain.py
tests/Packing/: functions.c  main.c  pack.in  read_ctrl.c
